<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ranga"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ranga"
    tools:ignore="ContentDescription"
   android:background="@drawable/ranga" >
    <include
        android:id="@+id/toolbar10"
        layout="@layout/toolbar10" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="350dp"

                android:layout_marginBottom="8dp" />
            <LinearLayout
                android:id="@+id/SliderDots"
                android:layout_width="match_parent"
                android:layout_height="30dp"

                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="cursive"

                android:text="@string/ranga"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#000000" />


            <TextView
                android:id="@+id/fb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/facebook2"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColorLink="#000000" />

            <TextView
                android:id="@+id/insta2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/insta2"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColorLink="#000000" />

            <TextView
                android:id="@+id/youtube2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/youtube2"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColorLink="#000000" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>